<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="io.cobrowse.standalone.ui.home.HomeFragment"
        android:label="@string/activity_main_menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_camera"
            app:destination="@id/nav_camera" />
        <action
            android:id="@+id/action_nav_home_to_nav_legacy_camera"
            app:destination="@id/nav_legacy_camera" />
        <action
            android:id="@+id/action_nav_home_to_cobrowse_code"
            app:destination="@id/nav_cobrowse_code" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="io.cobrowse.standalone.ui.settings.SettingsFragment"
        android:label="@string/activity_main_menu_settings" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="io.cobrowse.standalone.ui.camera.CameraFragment"
        android:label="@string/fragment_camera_title"
        tools:layout="@layout/fragment_camera"
        tools:targetApi="lollipop" />

    <fragment
        android:id="@+id/nav_legacy_camera"
        android:name="io.cobrowse.standalone.ui.camera.LegacyCameraFragment"
        android:label="@string/fragment_camera_title"
        tools:layout="@layout/fragment_legacy_camera" />

    <fragment
        android:id="@+id/nav_cobrowse_code"
        android:name="io.cobrowse.standalone.ui.sessioncode.CobrowseCodeFragment"
        android:label="@string/fragment_cobrowse_code"
        tools:layout="@layout/fragment_cobrowse_code" />
</navigation>