<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_home_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/fragment_home_button_6_digits_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="140dp"
        android:layout_margin="4dp"
        android:text="@string/fragment_home_button_6_digits_code"
        android:drawableTop="@drawable/ic_action_devices"
        app:layout_constraintEnd_toStartOf="@+id/fragment_home_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/fragment_home_button_open_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="140dp"
        android:layout_margin="4dp"
        android:text="@string/fragment_home_button_open_camera"
        android:drawableTop="@drawable/ic_action_camera"
        app:layout_constraintStart_toStartOf="@+id/fragment_home_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/fragment_home_button_open_notification_permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="210dp"
        android:layout_margin="4dp"
        android:text="@string/fragment_home_button_open_notification_permissions"
        android:drawableTop="@drawable/ic_action_notification"
        app:layout_constraintStart_toStartOf="@+id/fragment_home_button_6_digits_code"
        app:layout_constraintTop_toBottomOf="@+id/fragment_home_button_6_digits_code"
        app:layout_constraintEnd_toEndOf="@+id/fragment_home_button_open_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>